site/src/styles/body.css
* {
  -webkit-tap-highlight-color: transparent;
  -webkit-user-drag: none;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  background-color: var(--background);
  color: var(--text);

  transition: var(--transition-speed) opacity;
  opacity: 0;
}

body.active {
  opacity: 100%;
}

body > .container {
  position: relative;
  min-height: calc(100dvh - (var(--large-padding) * 4));
}

body > .container > .content-container {
  margin-top: calc(var(--large-padding) * 4);
  padding-bottom: var(--footer-height);
}

body.modal-active {
  overflow: hidden;
}

body.modal-active > .container {
  user-select: none;
  -webkit-user-select: none;
}

img {
  font-size: 0;
}

